[gd_scene load_steps=10 format=3 uid="uid://cuxflgp2q4gry"]

[ext_resource type="Script" path="res://Game/player.gd" id="1_6o5l2"]
[ext_resource type="PackedScene" uid="uid://cfmj08culyyig" path="res://Game/blaster.tscn" id="2_4ulnl"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7hlsk"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_c8p3c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nky4q"]
height = 1.2

[sub_resource type="Animation" id="Animation_htppx"]
resource_name = "Idle"
length = 3.0
loop_mode = 1

[sub_resource type="Animation" id="Animation_uxwxh"]
length = 0.001

[sub_resource type="Animation" id="Animation_kx7rc"]
resource_name = "attack"
length = 0.7

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ih2ug"]
_data = {
"Idle": SubResource("Animation_htppx"),
"RESET": SubResource("Animation_uxwxh"),
"attack": SubResource("Animation_kx7rc")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0.5, 35)
collision_layer = 13
collision_mask = 13
script = ExtResource("1_6o5l2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_7hlsk")

[node name="standing_collsion_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_c8p3c")

[node name="crouching_collsion_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.603537, 0)
shape = SubResource("CapsuleShape3D_nky4q")
disabled = true

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="head"]
current = true

[node name="Weapon" type="Node3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.333605, -0.408288, -0.662575)

[node name="Blaster" parent="head/Weapon" instance=ExtResource("2_4ulnl")]

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
playback_default_blend_time = 0.1
libraries = {
"": SubResource("AnimationLibrary_ih2ug")
}

[node name="Pickup_Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Pickup_Timer" to="." method="_on_pickup_timer_timeout"]
